--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -84,8 +84,9 @@
 					<div>
 					<b>Avaliação e Prazos:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(Entrega: 30/09)</b> - <img src="images/new2.gif" alt="" height="11" width="28"> <i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i></li>
-					<!--<li>Trabalho 2 - 80 pts</li>
+					<li>Trabalho 1 - 30 pts <b>(Entrega: 30/09)</b> - <i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i> </li>
+					<li>Trabalho 2 - 30 pts <b>(Entrega: 28/10)</b> - <i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2</a></i> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li>Trabalho 3 - 30 pts</li>
 						<ul>
 						<li>Definição dos grupos <b>(até 22/04)</b></li>
 						<li>Entrega da primeira fase e Arguição <b>(20/05)</b></li>
