--- a/poo.html
+++ b/poo.html
@@ -97,8 +97,8 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução a Java.ppt"> Aula 03 - Introdução a Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 6 - Herança</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 7 - Classes Abstratas e Interfaces</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 06 - Herança </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 7 - Classes Abstratas e Interfaces</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 8 - Coleções</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 9 - Polimorfismo</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a></li>
@@ -143,8 +143,10 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=jFI-qqitzwk&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=6"> O que é Visibilidade em um Objeto? </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=LV2243j4RTQ&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=7"> Configurando Visibilidade de Atributos e Métodos </a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g2x9oyBFSco&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=8"> Métodos Especiais <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6i-_R5cAcEc&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=9"> Métodos Getter, Setter e Construtor </a></li> -->
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g2x9oyBFSco&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=8"> Métodos Especiais </a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6i-_R5cAcEc&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=9"> Métodos Getter, Setter e Construtor </a></li> 
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=_PZldwo0vVo&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=20"> Herança </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=He887D2WGVw&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=22"> Mais sobre Herança... </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div>  
 					<div>
@@ -152,7 +154,7 @@
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Livro: Java Como Programar 6ª edição (Deitel)</i></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li> -->
-					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> <b> Notas da Prova 1 </b> <img src="images/new2.gif" alt="" height="11" width="28"></a></button></li> 
+					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></button></li> 
 					</ul>
 					</div> 
 				</div>
