--- a/gsi526.html
+++ b/gsi526.html
@@ -84,7 +84,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(14/10 às 10:40)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li>Prova 1 - 25 pts <b>(14/10 às 10:40)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 01 a 08</i></li>
 					<!--<li>Prova 2 - 30 pts <b>(04/05)</b></li>
 					<li>Prova 3 - 30 pts <b>(15/06)</b></i></li>
 					<li>Lista 1 - 1,5 pts <b>(13/04)</b></i></li>
@@ -102,9 +102,9 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-smells.pptx"> Aula 04 - Reengenharia, Refatoração e Bad Smell</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-reuso.pptx"> Aula 05 - Reuso de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QnfHYobvDg8"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6-arquitetura.pptx"> Aula 06 - Arquitetura de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=KG7PtDgY9_I"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-padroes-arquiteturais.pptx"> Aula 07 - Padrões Arquiteturais</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Bw5CcmbzyWQ"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-qualidade.pptx"> Aula 08 - Qualidade de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-testes.pptx"> Aula 09 - Testes de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/lxTZCuq6O9A"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-padroes-arquiteturais.pptx"> Aula 07 - Padrões Arquiteturais</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Bw5CcmbzyWQ"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-qualidade.pptx"> Aula 08 - Qualidade de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-testes.pptx"> Aula 09 - Testes de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/lxTZCuq6O9A"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-linha-de-produtos.pptx"> Aula 10 - Linha de Produtos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-controle-versao.pptx"> Aula 11 - Sistemas de Controle de Versão</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula12-idiomas-programacao.pptx"> Aula 12 - Idiomas de Programação</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)</li>
