--- a/poo.html
+++ b/poo.html
@@ -85,8 +85,8 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 25 pts <b>(Terça-feira, 15/09 às 13:00)</b> - <i> Aulas 1, 2, 3, 4 e 5</i></li>
-					<!--<li>Prova 2 - 35 pts <b>(05/05)</b></li>
-					<li>Prova 3 - 35 pts <b>(16/06)</b></li> -->					
+					<li>Prova 2 - 30 pts <b>(Terça-feira, 20/10 às 13:00)</b> - <i> Aulas 6, 7 e 8</li>
+					<!--<li>Prova 3 - 35 pts <b>(16/06)</b></li> -->					
 					</ul>
 					</div> 
 					<b>Material:</b> 
@@ -98,9 +98,9 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 06 - Herança</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 8 - Coleções</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 9 - Polimorfismo</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 8 - Coleções</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 9 - Polimorfismo</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/11.Idiomas de Programação.pdf"> Aula 11 - Idiomas de Programação</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a></li> 						
