--- a/poo.html
+++ b/poo.html
@@ -85,7 +85,7 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 25 pts <b>(Terça-feira, 15/09 às 13:00)</b> - <i> Aulas 1, 2, 3, 4 e 5</i></li>
-					<li>Prova 2 - 30 pts <b>(Terça-feira, 20/10 às 13:00)</b> - <i> Aulas 6, 7 e 8</li>
+					<li>Prova 2 - 30 pts <b>(Terça-feira, 20/10 às 13:00)</b> - <i> Aulas 6, 7 e 8</i></li>
 					<!--<li>Prova 3 - 35 pts <b>(16/06)</b></li> -->					
 					</ul>
 					</div> 
@@ -99,7 +99,7 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 06 - Herança</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 8 - Coleções</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 9 - Polimorfismo</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/11.Idiomas de Programação.pdf"> Aula 11 - Idiomas de Programação</a></li>
@@ -156,6 +156,7 @@
 					<!--<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Livro: Java Como Programar 6ª edição (Deitel)</i></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li> -->
 					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></button></li> 
+					<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></button></li> 
 					</ul>
 					</div> 
 				</div>
