--- a/poo.html
+++ b/poo.html
@@ -155,8 +155,8 @@
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Livro: Java Como Programar 6ª edição (Deitel)</i></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li> -->
-					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></button></li> 
-					<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></button></li> 
+					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></li> 
+					<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					</ul>
 					</div> 
 				</div>
