--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -86,7 +86,7 @@
 					<ul>
 					<li>Trabalho 1 - 30 pts <b>(Entrega: 30/09)</b> - <i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i></li>
 					<ul>
-					<li> <i><a href="aulas/lab-programacao/notas_trabalho1.pdf"> Notas do Trabalho 1</a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li>
+					<li> <i><a href="aulas/lab-programacao/notas_trabalho1.pdf"> Notas do Trabalho 1 (Atualizado em <b>14/10 às 17:30</b>)</a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li>
 					</ul>
 					<li>Trabalho 2 - 30 pts <b>(Entrega: 28/10)</b> - <i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2</a></i> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li>Trabalho 3 - 30 pts</li>
