--- a/poo-lab.html
+++ b/poo-lab.html
@@ -167,7 +167,8 @@
 					<b>Links diversos:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/relatorio_atividades.pdf"> Relatório de Atividades Entregues (Atualizado em <b>14/10 às 17:30</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto do Exercício Prático 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
+					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto do Exercício Prático 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 					
+					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ExemploDataHora/src"> <i>Código para lidar com Data/Hora em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/pc2-parte1.zip"> Exercícios Lab. Parte 1</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/avaliacao_trab_3.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Script de Avaliação </b></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_pc2_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais </b></a></li> -->
